--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,8 @@
 {
-    "trailingComma": "es5",
+    "printWidth": 80,
+    "trailingComma": "all",
     "tabWidth": 4,
-    "semi": true,
-    "singleQuote": true
+    "semi": false,
+    "singleQuote": true,
+    "arrowParens": "avoid"
 }
