--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@emailjs/browser": "^3.10.0",
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^13.0.0",
         "@testing-library/user-event": "^13.2.1",
@@ -12,9 +13,13 @@
         "@types/react-dom": "^18.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-icons": "^4.7.1",
+        "react-router-dom": "^6.4.5",
         "react-scripts": "5.0.1",
+        "react-transition-group": "^4.4.5",
+        "sticky-js": "^1.3.0",
         "styled-components": "^5.3.6",
-        "typescript": "^4.4.2",
+        "typescript": "*",
         "web-vitals": "^2.1.0"
     },
     "scripts": {
@@ -22,7 +27,10 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "prepare": "husky install"
+        "prepare": "husky install",
+        "prettier": "prettier src -check",
+        "lint-staged": "lint-staged --config lint-staged.js",
+        "husky-install": "husky install"
     },
     "eslintConfig": {
         "extends": [
@@ -43,11 +51,19 @@
         ]
     },
     "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^5.0.0",
         "autoprefixer": "^10.4.13",
+        "eslint": "^8.0.1",
+        "eslint-config-standard-with-typescript": "^24.0.0",
+        "eslint-plugin-import": "^2.25.2",
+        "eslint-plugin-n": "^15.0.0",
+        "eslint-plugin-promise": "^6.0.0",
+        "eslint-plugin-react": "^7.31.11",
         "husky": "^8.0.2",
         "lint-staged": "^13.1.0",
         "postcss": "^8.4.20",
         "prettier": "2.8.1",
-        "tailwindcss": "^3.2.4"
+        "tailwindcss": "^3.2.4",
+        "tsc-files": "^1.1.3"
     }
 }
