prettier styling, finalising on page structure

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,9 @@
         "react"
     ],
     "rules": {
-        "indent": "off"
+        "indent": "off",
+        "@typescript-eslint/explicit-function-return-type": {
+            "allowExpressions": true
+          }
     }
 }
