--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,5 +4,6 @@
     "tabWidth": 4,
     "semi": false,
     "singleQuote": true,
-    "arrowParens": "avoid"
+    "arrowParens": "avoid",
+    "jsxSingleQuote": true
 }
