--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         ]
     },
     "devDependencies": {
+        "@types/react-transition-group": "^4.4.5",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
         "autoprefixer": "^10.4.13",
         "eslint": "^8.0.1",
