--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
         "react-icons": "^4.7.1",
         "react-router-dom": "^6.4.5",
         "react-scripts": "5.0.1",
+        "react-slick": "^0.29.0",
         "react-transition-group": "^4.4.5",
+        "slick-carousel": "^1.8.1",
         "sticky-js": "^1.3.0",
         "styled-components": "^5.3.6",
         "typescript": "*",
@@ -51,6 +53,7 @@
         ]
     },
     "devDependencies": {
+        "@types/react-slick": "^0.23.10",
         "@types/react-transition-group": "^4.4.5",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
         "autoprefixer": "^10.4.13",
