--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "@types/node": "^16.7.13",
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
+        "dotenv": "^16.0.3",
+        "firebase": "^9.15.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.7.1",
