--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@types/react-dom": "^18.0.0",
         "dotenv": "^16.0.3",
         "firebase": "^9.15.0",
+        "gh-pages": "^4.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.7.1",
