--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
-    "name": "kadge",
+    "name": "sn-eng",
     "version": "0.1.0",
+    "homepage": "https://sn-eng.co.zw",
+    "author": "Denis 'SiDesigned' Siduna",
     "private": true,
     "dependencies": {
         "@emailjs/browser": "^3.10.0",
@@ -30,6 +32,8 @@
         "web-vitals": "^2.1.0"
     },
     "scripts": {
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build",
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
