--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "gh-pages": "^4.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-helmet-async": "^1.3.0",
         "react-icons": "^4.7.1",
         "react-router-dom": "^6.4.5",
         "react-scripts": "5.0.1",
